[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kelompok_2"
version = "0.0.1"
description = "Tugas 1 GitCollab dan Gitmmoji"
authors = [
  { name = "Raufan-PM" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["kelompok_2"]
include = ["pyproject.toml", "kelompok_2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["kelompok_2"]
force-sort-within-sections = true

